# Lab3

./: README
install/: local_setup.sh  setup.sh
install/safety_controller/lib/safety_controller/: safety_controller  safety_controller_tester
install/safety_controller/share/safety_controller/: package.dsv  package.ps1  package.sh  package.xml  params.yaml
install/wall_follower/share/wall_follower/: package.sh  package.xml  params.yaml
log/: latest_build
safety_controller/safety_controller/: params.yaml
safety_test/: package.xml  setup.cfg  setup.py
src/: long_left_log.npz  long_right_log.npz  short_left_far_angled_log.npz  short_left_far_log.npz  short_right_angled_log.npz  short_right_close_log.npz
src/safety_controller/: package.xml  setup.py
src/safety_controller/launch/: safety_controller.launch.xml  safety_with_wall_follower.launch.xml
src/safety_controller/safety_controller/: .safety_controller.py.swp  .safety_controller.swp  params.yaml  safety_controller.py  safety_controller_tester.py
src/wall_follower/: package.xml
src/wall_follower/bag_files/loop_fast/: loop_fast_0.db3  metadata.yaml
src/wall_follower/bag_files/one_turn/: metadata.yaml
src/wall_follower/bag_files/one_turn_fast/: metadata.yaml  one_turn_fast_0.db3
src/wall_follower/bag_files/straight/: metadata.yaml  straight_0.db3
src/wall_follower/bag_files/straight_fast/: metadata.yaml  straight_fast_0.db3
src/wall_follower/launch/: wall_follower.launch.xml
src/wall_follower/wall_follower/: params.yaml  wall_alternative.py  wall_follower.py
(+7 files in other folders)
